<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="radio_glide_option">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_retrofit_option">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="radio_load_app_option">LoadApp - Current repository by Udacity</string>

    <string name="txt_details_lbl_name">File name:</string>
    <string name="txt_details_lbl_status">Status:</string>
    <string name="btn_details_txt">OK</string>

    <string name="url_glide">https://github.com/bumptech/glide</string>
    <string name="url_repo">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
    <string name="url_retrofit">https://github.com/square/retrofit</string>

    <string name="notification_channel_id">LoadApp_file_downloaded</string>
    <string name="notification_channel_name">File downloaded</string>
    <string name="notification_channel_description">Informs about the downloaded file.</string>

    <string name="no_file_msg">Please select file to download</string>
</resources>
