<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/activity_detail"
    app:layoutDescription="@xml/content_detail_scene">

    <TextView
        android:id="@+id/txt_file_name_lbl"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_details_margin"
        android:text="@string/txt_details_lbl_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_file_name"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/txt_size_details" />

    <TextView
        android:id="@+id/txt_file_status_lbl"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_details_margin"
        android:text="@string/txt_details_lbl_status"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_file_status"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/txt_size_details" />

    <TextView
        android:id="@+id/txt_file_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/txt_details_margin"
        tools:text="@string/radio_glide_option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_file_name_lbl"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/txt_size_details"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txt_file_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/txt_details_margin"
        tools:text="Success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_file_status_lbl"
        app:layout_constraintTop_toBottomOf="@+id/txt_file_name"
        android:textSize="@dimen/txt_size_details"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/txt_details_margin"
        android:text="@string/btn_details_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_file_status"
        app:layout_constraintVertical_bias="1"
        android:background="@color/btn_ok_color"
        android:textColor="@android:color/white" />

</androidx.constraintlayout.motion.widget.MotionLayout>